--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ social-auth-app-django==5.0.0
 social-auth-core==4.3.0
 djangorestframework==3.14.0
 requests==2.25.1
+channels==4.0.0
 
 # IF error:
 #
